<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.rossmaguire.beacontest.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/beacon_icon"
        android:layout_above="@+id/linearLayout"
        android:layout_weight="2.14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_details"
            android:textColor="#00aa55"
            android:textSize="35sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textColorHint="#ffffff"
            android:background="#5d5d5d"
            android:padding="10dp"
            android:hint="@string/hint_username"
            android:inputType="textNoSuggestions"
            android:imeOptions="actionNext"
            android:textSize="20sp"
            android:id="@+id/userName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/hint_password"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textStyle="bold"
            android:background="#5d5d5d"
            android:padding="10dp"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:layout_marginTop="5dp"
            android:id="@+id/passWord" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/btnLogin"
            android:text="@string/btn_login" />

        <CheckBox
            android:id="@+id/saveLoginCheckBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btnLogin"
            android:text="@string/remember_me"
            android:textColor="#FFF" />

    </LinearLayout>

</RelativeLayout>
